<resources>
    <string name="app_name">Healer</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="change_language">Change Language</string>
    <string name="appointments">Appointments</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open" translatable="false">open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">close navigation drawer</string>
    <string name="work_with_us">Work with Us</string>
    <string name="password">Password</string>
    <string name="language">English</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="register">Register</string>
    <string name="gender">Gender</string>
    <string name="speciality">Speciality</string>
    <string name="experience_years">Experience Years</string>
    <string name="your_bio_i_m">your bio .I\'m …</string>
    <string name="dr_somyah_alsayed">Dr.Name Title</string>
    <string name="make_call_button">make call Button</string>
    <string name="make_a_chat_button">Make a Chat Button</string>
    <string name="make_a_video_call_button">Make a video call Button</string>
    <string name="register_now">Register now</string>
    <string name="email">  Email</string>
    <string name="available_appointment">Available Appointment</string>
    <string name="this_is_a_bio_example_just_to_fill_bio_space_and_see_how_it_will_look_like_if_user_added_bio" translatable="false">This is a bio example just to fill bio space and see how it will look like if user added bio</string>
    <string name="bio">Bio</string>
    <string name="consult_now">Consult now</string>
    <string name="_100">100 $$</string>
    <string name="specialty">specialty</string>
    <string name="name">Name</string>
    <string name="delete_my_account"> Delete my account</string>
    <string name="set_my_appointments">Set my Appointments</string>
    <string name="update">Update</string>
    <string name="appointment">appointment</string>
    <string name="added_appointments">Added Appointments</string>
    <string name="otp_message">Please enter the Pin we sent to you to verify your number</string>
    <string name="verification_code">Verification code</string>
    <string name="continue1">Continue</string>
    <string name="verification_lable">We Sent you a code</string>
    <string name="code_resend">Didn\'t get the code <b> Resend </b></string>
    <string name="phone_number">Phone Number</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="language_setting">Language Setting :</string>
    <string name="delete_user_message">Deleting this account will result in completely removing your account from the system and you won\'t be able to access it</string>
    <string name="delete_user_title">Are You Sure ?</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="delete">Delete</string>
    <string name="deleted_successfully">your account is successfully deleted</string>
    <string name="Error_deleting">Error while deleting account</string>
    <string name="Female">Female</string>
    <string name="male">male</string>
    <string name="account">Account</string>
    <string name="date" translatable="false">  12   mon   2022   7   AM</string>
    <string name="soon">Soon</string>
    <string name="get_support">get Support</string>
    <string name="technical_support">Technical support :</string>
    <string name="booked_appointments">Booked Appointments</string>
    <string name="app_Already_set">You\'ve Already set this appointment</string>
    <string name="no_internet_msg">oops you\'re not connected to the internet connect and try again</string>
    <string name="confirm_booking">"Confirm Booking"</string>
    <string name="booking_msg">Are you sure you want to book this appointment on</string>>
    <string name="yes">Yes</string>
    <string name="already_booked">You\'ve already booked this appointment</string>
    <string name="login_to_book"> You must Login before Booking</string>
    <string name="login_to_call">You must login to make call</string>
    <string name="appointment_set"> Your appointment is set Successfully </string>
    <string name="booking_confirmed">booking is confirmed</string>


</resources>