<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/chatsFragment"
            android:icon="@drawable/ic_chat_24"
            android:title="@string/chats" />

        <item
            android:id="@+id/appointmentsFragment"
            android:icon="@drawable/ic_appointments_24"
            android:title="@string/appointments" />
    </group>

    <item android:title="@string/profile">

        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_person_24"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_login_24"
                    android:title="@string/login" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout_24"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>
    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_24"
                android:title="@string/setting"/>
        </menu>
    </item>
</menu>
