<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/cardViewTab"
        app:layout_constraintStart_toStartOf="@+id/cardViewTab">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sycName"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="176dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/name"
                    android:textAlignment="textStart"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sycSpecialty"
                    android:layout_width="144dp"
                    android:layout_height="33dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/specialty"
                    android:textAlignment="textStart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.977"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sycName" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImage"
                    android:layout_width="135dp"
                    android:layout_height="105dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/doc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.078"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/psyPrice"
                    android:layout_width="88dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="176dp"
                    android:layout_marginTop="131dp"
                    android:layout_marginBottom="11dp"
                    android:text="@string/_100"
                    android:textAlignment="textStart"
                    app:layout_constraintBottom_toTopOf="@+id/ConsultBTN"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/ConsultBTN"
                    android:layout_width="186dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/consult_now"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/psyPrice" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="55dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/years"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/psyExpYears"
                    app:layout_constraintTop_toBottomOf="@+id/sycSpecialty" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/expandableLayout"
                    android:layout_width="305dp"
                    android:layout_height="219dp"
                    android:layout_marginTop="52dp"
                    android:layout_marginBottom="77dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ConsultBTN">

                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginStart="18dp"
                        android:background="#88333131"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/bio"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/primaryTextColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/bio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/this_is_a_bio_example_just_to_fill_bio_space_and_see_how_it_will_look_like_if_user_added_bio"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:background="#88888888"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bio" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="125dp"
                        android:text="@string/available_appointment"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/primaryTextColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view3" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/AvailableAppointmentRV"
                        android:layout_width="300dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView8"
                        tools:ignore="SpeakableTextPresentCheck" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/psyExpYears"
                    android:layout_width="82dp"
                    android:layout_height="17dp"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/experience_years"
                    android:textAlignment="viewStart"
                    app:layout_constraintEnd_toStartOf="@+id/textView"
                    app:layout_constraintStart_toEndOf="@+id/profileImage"
                    app:layout_constraintTop_toBottomOf="@+id/sycSpecialty" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

